# venom-module-brand-studio

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  coverage.xml  module.json  pyproject.toml
.github/workflows/: ci.yml
tests/: test_audit_client.py  test_connectors.py  test_llm_client.py  test_manifest.py  test_routes.py  test_service.py
venom_module_brand_studio/: __init__.py
venom_module_brand_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
venom_module_brand_studio/api/: __init__.py  routes.py  schemas.py
venom_module_brand_studio/connectors/: __init__.py  devto.py  github.py  google_cse.py  hashnode.py  hf.py  linkedin.py  medium.py  reddit.py  sources.py
venom_module_brand_studio/services/: __init__.py  audit_client.py  llm_client.py  service.py
web-next/: page.tsx
web-next/i18n/: de.json  en.json  pl.json
